2005-12-07  Martin Hunt  <hunt@redhat.com>

	* agg/agg.test: Adjust results to match
	the more compact histogram format.

	* pmaps/*.c: Change pmap type from MAP to PMAP.
	
	* pmaps/pmap.test: Adjust results to match
	the more compact histogram format.

	* maps/map.test: Adjust results to match
	the more compact histogram format.

2005-11-28  Martin Hunt  <hunt@redhat.com>

	* pmaps/pmap.test: Add ix_log and ix_none.
	* pmaps/ix_log.c: Test log histograms.
	* pmaps/ix_none.c: Test no histograms.	

2005-11-10  Martin Hunt  <hunt@redhat.com>
	* pmaps/ix2.c: New test. Test _stp_pmap_get_*().
	* pmaps/iii3.c: New test. Test _stp_pmap_get_*().	
	* pmaps/pmap.test: Update.

2005-11-10  Martin Hunt  <hunt@redhat.com>	
	* pmaps/ii2.c: New test of maps and pmaps with the same keysym.
	* pmaps/pmap.test: Update.

2005-11-09  Martin Hunt  <hunt@redhat.com>

	* maps/sort2.c: New file.
	* maps/sort_stat.c: New file.
	* maps/map.test: Update

2005-11-08  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Remove old map API tests.
	* maps/ii2.c: Renamed ii.c.
	* maps/iiss2.c: Renamed iiss.c.
	* maps/is2.c: Renamed is.c.
	* maps/issii2.c: Renamed issii.c.
	* maps/isx2.c: Renamed isx.c.
	* maps/map_format2.c: Renamed map_format.c.
	* maps/si2.c: Renamed si.c.
	* maps/keys.c: Deleted
	* maps/test_list_int64.c: Deleted.
	* maps/test_list_string.c: Deleted.	
	* maps/sort.c: Update to use new map API.

2005-11-08  Martin Hunt  <hunt@redhat.com>

	* pmaps/*: Add new pmaps tests.

2005-10-28  Martin Hunt  <hunt@redhat.com>
	* maps/keys.c: New file. Tests specific to _stp_key_get_*().

	* maps/iiss2.c (main): Add some comments to make clear expected 
	results.
	* maps/is2.c (main): _stp_map_get_*s() now returns "" instead
	of NULL when lookup fails. _stp_map_set_*s() now deletes a node
	when setting to "" (as well as NULL).
	* maps/setadd.c (main): Ditto.
	* maps/map.test: update results.

2005-10-26  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Add results for iiiiii and ssssss.