@@ -1,3 +1,8 @@
+2005-12-08  Martin Hunt  <hunt@redhat.com>
+
+	* maps/map.test: Add size test.
+	* pmaps/pmap.test: Add size test.
+
 2005-12-07  Martin Hunt  <hunt@redhat.com>
 
 	* agg/agg.test: Adjust results to match
